Fix author highlight in firefox not being visible

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -182,7 +182,7 @@ $icons: (
 
     .authors {
         .me {
-            font-weight: 500;
+            font-weight: bold;
         }
     }
 
